# platform

./: .env.example  .gitattributes  .gitignore  .markdownlint  .releaserc.json  .skill-loop-progress.md  .yamllint  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  compose.chatgpt-sim.yml  lefthook.yml  mise.toml.draft
apps/apim-simulator/: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  UPGRADE_LOG.md  catalog-info.yaml  compose.ai-gateway.llamacpp.yml  compose.ai-gateway.yml  compose.backstage.yml  compose.edge.yml  compose.hello.otel.yml  compose.hello.yml  compose.keyvault.yml  compose.mcp.yml  compose.oidc.yml  compose.otel.yml  compose.public.yml  compose.tls.yml  compose.todo.otel.yml  compose.todo.yml  compose.ui.yml  compose.yml  pyproject.toml  sonar-project.properties
apps/apim-simulator/.gitea/workflows/: build-images.yaml
apps/apim-simulator/.github/workflows/: ci.yml  release.yml
apps/apim-simulator/app/: Dockerfile  Makefile  ai_gateway.py  config.py  go.mod  keyvault.py  main.py  named_values.py  openapi_import.py  policy.py  proxy.py  resource_projection.py  security.py  telemetry.py  terraform_import.py
apps/apim-simulator/backstage/app/: .dockerignore  Dockerfile  README.md  app-config.production.yaml  app-config.yaml  catalog-info.yaml  package.json
apps/apim-simulator/docs/: AI-GATEWAY.md  API-CLIENT-GUIDE.md  APIM-STARTER-RECIPE.md  APIM-TRAINING-GUIDE.md  ARM-VS-AZURERM-GAPS.md  AZURE-APIM-TERM-MAP.md  CAPABILITY-MATRIX.md  FIRST-DAY-APIM-CHECKLIST.md  MIGRATING-FROM-AWS-API-GATEWAY.md  walkthrough-apim-get-started-tutorial01.md  walkthrough-apim-get-started-tutorial02.md  walkthrough-apim-get-started-tutorial03.md  walkthrough-apim-get-started-tutorial04.md  walkthrough-apim-get-started-tutorial05.md  walkthrough-apim-get-started-tutorial06.md  walkthrough-apim-get-started-tutorial07.md  walkthrough-apim-get-started-tutorial08.md  walkthrough-apim-get-started-tutorial09.md  walkthrough-apim-get-started-tutorial10.md  walkthrough-apim-get-started-tutorial11.md  walkthrough-apim-get-started.md  walkthrough-core-stacks.md  walkthrough-direct-public-gateway-otel.md  walkthrough-direct-public-gateway.md  walkthrough-edge-http.md  walkthrough-edge-tls.md  walkthrough-example-stacks.md  walkthrough-hello-starter-oidc-subscription.md  walkthrough-hello-starter-oidc.md  walkthrough-hello-starter-otel.md  walkthrough-hello-starter-subscription.md  walkthrough-hello-starter.md  walkthrough-mcp-gateway.md  walkthrough-oidc-gateway.md  walkthrough-operator-console.md  walkthrough-private-internal-stack.md  walkthrough-todo-demo-bruno.md  walkthrough-todo-demo-otel.md  walkthrough-todo-demo.md
apps/apim-simulator/examples/: basic.json  mcp.json  sso.json
apps/apim-simulator/examples/ai-gateway/: apim.json  apim.llamacpp.json
apps/apim-simulator/examples/edge/: nginx.conf
apps/apim-simulator/examples/hello-api/: Dockerfile  (+6 more)
apps/apim-simulator/scripts/: audit-shell-scripts.sh  build_runtime_artifact.py  check-bash32-compat.sh  check-host-ports.sh  check-version.sh  check_backstage.py  check_sample_compat.py  export_todo_har.py  gen_dev_certs.sh  generate_walkthroughs.sh  get_keycloak_token.py  import_tofu.py  lint-markdown.sh  lint-yaml.sh  llamacpp_ai_gateway.py  release.sh  release_tag.sh  release_version.sh  run-stacked-make.sh  run_smoke_private.py  run_tutorial_smoke.sh  smoke_ai_gateway.py  smoke_edge.py  smoke_hello.py  smoke_keyvault.py  smoke_oidc.py  smoke_private.py  smoke_todo.py  stack-env.sh  tutorial_lib.sh  verify_hello_otel.py  verify_otel.py
apps/apim-simulator/tests/: compose-smoke-sso.sh  compose-smoke.sh  conftest.py  test_backstage_integration.py  test_container_hardening.py  test_default_env_config.py  test_dependency_footprint.py  test_gateway.py  test_integration_keycloak.py  test_keyvault.py  test_management_service.py  test_policy_golden.py  test_release_artifacts.py  test_resource_projection.py  test_run_server.py  test_sample_compat.py  test_scenarios.py  test_terraform_import.py  test_urls.py
apps/apim-simulator/ui/: .dockerignore  Dockerfile  api-types.d.ts  app.js  index.html  nginx-main.conf  package-lock.json  package.json  styles.css  vite.config.js  vite.config.ts
apps/idp-core/: .dockerignore  Dockerfile  Dockerfile.dockerignore  Makefile  compose.yml  pyproject.toml
apps/idp-core/app/: Dockerfile  Dockerfile.dockerignore  Makefile  __init__.py  adapters.py  audit.py  catalog.py  contracts.py  environment_requests.py  go.mod  main.py  models.py  paths.py
apps/idp-core/app-go/: Makefile
apps/idp-core/tests/: compose-smoke.sh  test_adapters.py  test_api.py  test_catalog.py  test_contracts.py  test_paths.py
apps/platform-mcp/: .dockerignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  catalog-info.yaml  compose.yml  pyproject.toml
apps/platform-mcp/app/: .dockerignore  Dockerfile  Makefile  go.mod
apps/platform-mcp/app-go/: .dockerignore  Makefile
apps/platform-mcp/platform_mcp/: __init__.py  clients.py  d2.py  observability.py  server.py  smoke.py
apps/platform-mcp/tests/: compose-smoke.sh  test_server.py
apps/subnet-calculator/apim-simulator/: .env.example  .gitignore  AI_POLICY.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  biome.json  compose.edge.yml  compose.hello.yml  compose.mcp.yml  compose.oidc.yml  compose.otel.yml  compose.private.yml  compose.public.yml  compose.tls.yml  compose.todo.otel.yml  compose.todo.yml  compose.ui.yml  compose.yml  pyproject.toml
apps/subnetcalc/api-fastapi-azure-function/: Dockerfile  Dockerfile.uvicorn  README.md  auth.py  compose.yml  function_app.py  pyproject.toml  requirements.txt  test_auth.py  test_auth.sh  test_dependency_footprint.py  test_endpoints.sh  test_function_app.py  test_jwt.py
tools/platform-workflow-ui/: go.mod  pyproject.toml
tools/platform-workflow-ui/platform_workflow_ui/: __init__.py  main.py  workflow.py
tools/platform-workflow-ui/tests/: test_app.py  test_workflow.py
(+2240 files in other folders)
