[project]
name = "platform-mcp"
version = "0.1.0"
description = "Platform MCP server for learning internal developer platform workflows"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "mcp==1.27.0",
    "starlette==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
platform-mcp = "platform_mcp.server:main"
platform-mcp-smoke = "platform_mcp.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platform_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

[tool.uv]
exclude-newer = "7 days"
