[project]
name = "platform-workflow-ui"
version = "0.1.0"
description = "FastAPI and HTMX local platform workflow console"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "hypercorn>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "7 days"

[tool.hatch.build.targets.wheel]
packages = ["platform_workflow_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
