[project]
name = "subnetcalc-python-api"
version = "0.1.0"
description = "IPv4/IPv6 subnet validation and analysis API with cloud provider support"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "azure-functions>=2.0.0",
    "fastapi[standard]>=0.118.0",
    # The cooldown-eligible FastAPI line still requires httpx<1.0, so the
    # httpx 1.0 prerelease track is not solvable here yet without bypassing
    # the repo's 7-day age gate on FastAPI itself.
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.1",
    # Teaching repo policy still follows cooled-off latest, but the current
    # OpenTelemetry exporter line caps protobuf below 7.x, so this app stays on
    # the highest compatible 5.x line until that upstream constraint moves.
    "protobuf>=5.29.5,<6",
    # Avoid the opentelemetry-exporter-otlp meta-package (pulls grpcio), which can
    # override Azure Functions worker dependencies and destabilize the runtime.
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
